# judge-api

./: .gitignore  .pre-commit-config.yaml  README.md  action.yml  coverage.xml  pyproject.toml
.code_quality/: mypy.ini
.github/workflow/: tests.yml
.github/workflows/: new_action.yml  tests.yml
app/: __init__.py  __main__.py
app/DMOJ/: judge.py  judge_connection.py  submission.py
app/executor/: executor.py
app/judge_api/: views.py
app/middleware/: request_validations.py
app/ping/: __init__.py  views.py
app/ping/judge_endpoint/: __init__.py  endpoint.py  endpoint_check.py
app/problem/: __init__.py  file_creator.py  views.py
app/utils/: constants.py
docs/: swagger.yaml
tests/: __init__.py  conftest.py  resources.py  test_ping.py
tests/DMOJ/: test_judge.py  test_judge_connection.py  test_submission.py
tests/executor/: test_executor.py
tests/judge_endpoint/: __init__.py  __main__.py  test_judge_endpoint.py
tests/middleware/: test_middleware.py
tests/mnt/problems/EDM05E01/: init.yml
tests/problem/: test_problem.py
utils/: constants.py  exceptions.py
